--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ p.font-effect-anaglyph {
 /* Ensure that slides don't exceed the container width */
 .mySlides img {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .active {
