--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,15 @@ p.font-effect-anaglyph {
     position: relative;
     margin: auto;
 }
-
+.slideshow-container2 {
+    width: 300px;
+    position: relative;
+    margin: auto;
+    display: flex; /* Use flexbox */
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; /* Center items horizontally */
+    justify-content: center; /* Center items vertically */
+}
 /* Number text (1/3 etc) */
 .numbertext {
     color: #f2f2f2;
